# ct-stem

./: .gitignore  .gitmodules  pyproject.toml  requirements.txt
.ebextensions/: 01_packages.config  02_python.config
ctstem_site/: ElasticBeanstalkDeployment.md  LOCAL_DEV.md  README.md  manage.py
ctstem_site/ctstem_app/: admin.py  cron.py  exceptions.py  forms.py  middleware.py  models.py  pipeline.py  urls.py  util.py  views.py  widgets.py
ctstem_site/ctstem_app/migrations/: 0001_initial.py  0002_auto_20151005_1421.py  0003_auto_20151006_1619.py  0004_auto_20151007_1434.py  0005_auto_20151007_1449.py  0006_auto_20151009_1351.py  0007_auto_20151009_1509.py  0008_auto_20151014_1557.py  0009_auto_20151014_1615.py  0010_auto_20151014_1651.py  0011_auto_20151027_1143.py  0012_author.py  0013_auto_20151027_1643.py  0014_publication.py  0015_auto_20151028_1043.py  0016_auto_20151028_1046.py  0017_auto_20151028_1301.py  0018_auto_20151029_1501.py  0019_auto_20151102_1556.py  0020_auto_20151111_1203.py  0021_auto_20151111_1204.py  0022_auto_20151112_1036.py  0023_auto_20151116_1246.py  0024_auto_20151125_1037.py  0025_auto_20151130_1015.py  0026_auto_20151203_1117.py  0027_auto_20151204_1019.py  0028_remove_usergroup_assignments.py  0029_auto_20151207_1101.py  0030_auto_20151207_1508.py  0031_auto_20151209_1052.py  0032_auto_20160104_1217.py  0033_auto_20160104_1340.py  0034_auto_20160105_1527.py  0035_auto_20160107_1225.py  0036_auto_20160107_1403.py  0037_standard_short_name.py  0038_auto_20160107_1647.py  (+189 more)
ctstem_site/ctstem_site/: settings.py  urls.py  utils.py  wsgi.py
(+229 files in other folders)
