[tool.poetry]
name = "ct-stem"
version = "3.7.0"
description = "CT-STEM"
authors = ["Sachin Pradhan", "Connor Bain"]

[tool.poetry.dependencies]
python = "3.7"
Django = "^2.2.0"
django-autocomplete-light = "^3.8.0"
django-ckeditor = "^5.9.0"
django-cleanup = "^4.0.0"
django-crontab = "^0.7.1"
django-dbbackup = "^3.3.0"
django-dia = "^0.4.1"
django-nested-formset = "^0.1.4"
django-password-reset = "^2.0"
django-smart-selects = "^1.5.9"
django-storages = "^1.8.0"
social-auth-app-django = "^4.0.0"
psycopg2-binary = "^2.8.4"
python-slugify = "^4.0.0"
Pillow = "^6.2.1"
boto3 = "^1.10.36"
xhtml2pdf = "^0.2.3"
xlwt = "^1.3.0"
django-reset-migrations = "^0.4.0"
django-tinymce = "2.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core^1.0.0"]
build-backend = "poetry.core.masonry.api"
